syntax = "proto3";
package services.bria_admin.v1;

option go_package = "github.com/GaloyMoney/terraform-provider-briaadmin/client/proto/adminv1";

service AdminService {
  rpc Bootstrap(BootstrapRequest) returns (BootstrapResponse) {}
  rpc CreateAccount(CreateAccountRequest) returns (CreateAccountResponse) {}
  rpc ListAccounts(ListAccountsRequest) returns (ListAccountsResponse) {}
}

message BootstrapRequest {}

message BootstrapResponse {
  AdminApiKey key = 1;
}

message AdminApiKey {
  string id = 1;
  string name = 2;
  string key = 3;
}

message CreateAccountRequest {
  string name = 1;
}

message CreateAccountResponse {
  ProfileApiKey key = 1;
}

message ListAccountsRequest {}

message ListAccountsResponse {
  repeated Account accounts = 1;
}

message Account {
  string id = 1;
  string name = 2;
}

message ProfileApiKey {
  string profile_id = 1;
  string name = 2;
  string key = 3;
  string account_id = 4;
}
